--- a/style.css
+++ b/style.css
@@ -110,7 +110,10 @@ letter-spacing:1px;
     width: 100%;
 }
 
-
+.about-info .progress {
+    background: #f7f7f7 !important;
+    box-shadow: 0px 2px 7px rgba(0, 0, 0, 0.15) inset;
+}
 .about-info h3  {
     font-size: 30px;
     line-height: 33px;
